Added link to Python OpenCV.

--- a/README.org
+++ b/README.org
@@ -6,6 +6,8 @@
 
 [[https://github.com/cryptokasten][file:https://img.shields.io/badge/dynamic/json.svg?url=https://api.github.com/users/cryptokasten&label=Cryptokasten&query=$.public_repos]]
 
+- [[https://github.com/cryptokasten/python-opencv][Python OpenCV]]
+
 ** System environment
 
 - Python 3.7.0
